test/tests/errors/error-function-incorrect-param3.sm
// true
// false
/**/
/**/

program {
    func x(a, b, c) {
        "t"
    }

    output x(1, 2, 3, 4);
}